force-app/main/default/objects/SuperannuationCalculator__c/SuperannuationCalculator__c.object-meta.xml
<CustomObject>
    <label>Superannuation Calculator</label>
    <nameField>
        <label>Superannuation Calculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Superannuation Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>