force-app/main/default/objects/SuperannuationCalculator__c/fields/fifth__c.field-meta.xml
<CustomField>
    <fullName>fifth__c</fullName>
    <label>5th Calcaulation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>fourth__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Order_of_Calculation</valueSetName>
    </valueSet>
</CustomField>