force-app/main/default/objects/SuperannuationCalculator__c/fields/first__c.field-meta.xml
<CustomField>
    <fullName>first__c</fullName>
    <label>1st Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contribute</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>