force-app/main/default/objects/SuperannuationCalculator__c/fields/FlagFee__c.field-meta.xml
<CustomField>
    <fullName>FlagFee__c</fullName>
    <label>Flag Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>