force-app/main/default/objects/SuperannuationCalculator__c/fields/fourth__c.field-meta.xml
<CustomField>
    <fullName>fourth__c</fullName>
    <label>4th Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>third__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Order_of_Calculation</valueSetName>
    </valueSet>
</CustomField>