force-app/main/default/objects/SuperannuationCalculator__c/fields/ICR__c.field-meta.xml
<CustomField>
    <fullName>ICR__c</fullName>
    <label>Indirect Cost Ratio (ICR)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>