force-app/main/default/objects/SuperannuationCalculator__c/fields/per__c.field-meta.xml
<CustomField>
    <fullName>per__c</fullName>
    <formula>IF( TEXT(StartingMonth__c) = &quot;None&quot;,&quot;Year&quot;,&quot;Month&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>per</label>
    <type>Text</type>
</CustomField>