force-app/main/default/objects/SuperannuationCalculator__c/fields/second__c.field-meta.xml
<CustomField>
    <fullName>second__c</fullName>
    <label>2nd Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>first__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contribute</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>ICR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>