force-app/main/default/objects/SuperannuationCalculator__c/fields/sizeOfBalance__c.field-meta.xml
<CustomField>
    <fullName>sizeOfBalance__c</fullName>
    <label>Number of Balance Sheet Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>