force-app/main/default/objects/SuperannuationCalculator__c/fields/StartingBalance__c.field-meta.xml
<CustomField>
    <fullName>StartingBalance__c</fullName>
    <label>StartingBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>