force-app/main/default/objects/SuperannuationCalculator__c/fields/StartingYear__c.field-meta.xml
<CustomField>
    <fullName>StartingYear__c</fullName>
    <label>Starting Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>