force-app/main/default/objects/SuperannuationCalculator__c/fields/SuperFund__c.field-meta.xml
<CustomField>
    <fullName>SuperFund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Super Fund</label>
    <referenceTo>SuperFund__c</referenceTo>
    <relationshipLabel>Superannuation Calculators</relationshipLabel>
    <relationshipName>Superannuation_Calculators</relationshipName>
    <type>Lookup</type>
</CustomField>