force-app/main/default/objects/SuperannuationCalculator__c/fields/third__c.field-meta.xml
<CustomField>
    <fullName>third__c</fullName>
    <label>3rd Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>second__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Order_of_Calculation</valueSetName>
    </valueSet>
</CustomField>